editando desde mi pc con windows

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>La ruta mas corta (Algoritmo de Dijkstra)</h1>
             <h2>Recurso interactivo</h2>
             <p>El algoritmo basicamente soluciona la problemática de encontrar el camino mas corto entre Vertices que a su vez
-                estan conectados por aristas a mas vertices, el objeto de esto es ver que el valor de las artistas sumadas
+                estan conectados por aristas a mas vertices, el objeto de esto es ver que el valor de las aristas sumadas
                 en una ruta sea el mas corto o menor posible. </p>
         </div>
         <div class="interface">
