--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header class="col-12 encabezado">
                 <img class="float-left" src="logo.png" alt="utpl_logo" id="logo">
                 <h6 class="float-right" id="tituloe">Recursos Interactivos
-                        <i class="fas fa-pencil-alt"></i>
+                    <i class="fas fa-pencil-alt"></i>
                 </h6>
 
             </header>
@@ -41,7 +41,7 @@
 
             </div>
 
-            <div class="col-12 btn-group btn-justified contenedorbtn">
+            <div class="col-12 btn-group btn-justified contenedorbtn d-none d-md-inline">
 
 
                 <button id='randomNodeButton' class="btn btn-primary botones">Añadir nodo</button>
@@ -51,8 +51,15 @@
 
 
             </div>
-            <div class=" col-7 alert alert-info instrucciones">
 
+            <div class="col-12 btn-group-vertical btn-sm btn-sm d-md-none">
+                    <button id='randomNodeButton' class="btn btn-primary botones">Añadir nodo</button>
+                    <button id='connectNodeButton' class="btn btn-primary botones">Conectar nodos</button>
+                    <button id='dijkstraButton' class="btn btn-primary botones">Camino mas corto</button>
+                    <button id='resetButton' class="btn btn-primary botones">Limpiar</button>
+            </div>
+
+            <div class=" col-12 col-md-7 alert alert-info instrucciones">
                 <div class="mensaje1">
                     <i class="fas fa-info-circle"></i> Presiona
                     <strong>'Añadir nodo'</strong> para comenzar...
@@ -60,17 +67,18 @@
 
             </div>
             <div class="col-12 col-md-6">
-                    <canvas id='canvas' width="720px" height="420px" ></canvas>
-                    <script type="text/javascript" src="js/graph.js"></script>
+                <canvas id='canvas' width="720px" height="420px"></canvas>
+                <script type="text/javascript" src="js/graph.js"></script>
             </div>
             <div>
-                
+
             </div>
 
 
 
             <footer class="col-12">
-                <p><i class="far fa-envelope float-center"></i> krarrobo1@utpl.edu.ec</p>
+                <p>
+                    <i class="far fa-envelope float-center"></i> krarrobo1@utpl.edu.ec</p>
             </footer>
         </div>
 
